Add comprehensive SEO improvements, newsletter, and contact form

--- a/calculators/emi-calculator.html
+++ b/calculators/emi-calculator.html
@@ -5,12 +5,25 @@
 
   <title>EMI Calculator – Loan EMI Calculator Online</title>
   <meta name="description" content="Free EMI Calculator to calculate loan EMI, total interest and total payment for home, car and personal loans." />
+  <meta name="keywords" content="EMI calculator, loan calculator, home loan EMI, car loan EMI, personal loan EMI, interest calculator">
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/emi-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
