--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us</title>
+  <title>Contact Us - Upkarana Online Tools</title>
+  <meta name="description" content="Get in touch with Upkarana Online Tools. Send us your feedback, suggestions, or questions about our financial calculators." />
+  <meta name="keywords" content="contact, feedback, support, financial calculators">
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/contact.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+
+  <script>
+    // Contact form handler
+    document.addEventListener('DOMContentLoaded', function() {
+      const contactForm = document.querySelector('.contact-form');
+      if (contactForm) {
+        contactForm.addEventListener('submit', function(e) {
+          e.preventDefault();
+          alert('Thank you for your message! We\'ll get back to you within 24-48 hours.');
+          this.reset();
+        });
+      }
+    });
+  </script>
 </head>
 
 <body>
@@ -26,8 +58,46 @@
   <h1>Contact Us</h1>
 
   <div class="content-section">
-    <p>Email us at:</p>
-    <p><strong>gyan.prakash0711@gmail.com</strong></p>
+    <p>We'd love to hear from you! Send us your feedback, suggestions, or questions about our financial calculators.</p>
+  </div>
+
+  <div class="contact-form-container">
+    <form class="contact-form" action="#" method="post">
+      <div class="form-group">
+        <label for="name">Name *</label>
+        <input type="text" id="name" name="name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email *</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="subject">Subject</label>
+        <select id="subject" name="subject">
+          <option value="">Select a subject</option>
+          <option value="feedback">Feedback</option>
+          <option value="bug">Bug Report</option>
+          <option value="feature">Feature Request</option>
+          <option value="calculator">Calculator Help</option>
+          <option value="other">Other</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message *</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+      </div>
+
+      <button type="submit" class="submit-btn">Send Message</button>
+    </form>
+  </div>
+
+  <div class="contact-info">
+    <h3>Other Ways to Reach Us</h3>
+    <p><strong>Email:</strong> gyan.prakash0711@gmail.com</p>
+    <p><strong>Response Time:</strong> We typically respond within 24-48 hours</p>
   </div>
 
 </div>
