--- a/tools.html
+++ b/tools.html
@@ -3,11 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>All Financial Calculators</title>
+  <meta name="description" content="Complete list of free online financial calculators for loans, investments, taxes, and retirement planning in India." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="financial calculator, EMI calculator, SIP calculator, loan calculator, investment calculator, tax calculator, India">
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/tools.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
 </head>
 
 <body>
