--- a/index.html
+++ b/index.html
@@ -5,10 +5,52 @@
   <title>Upkarana Online Tools – Free Financial Calculators</title>
   <meta name="description" content="Free online financial calculators including EMI, SIP, Lumpsum, Net Worth, Credit Card Debt Payoff and Loan tools." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="financial calculator, EMI calculator, SIP calculator, loan calculator, investment calculator, tax calculator, India">
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/">
+  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
+  <meta property="og:title" content="Upkarana Online Tools – Free Financial Calculators">
+  <meta property="og:description" content="Free online financial calculators including EMI, SIP, Lumpsum, Net Worth, Credit Card Debt Payoff and Loan tools.">
+  <meta property="og:image" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
+  <meta property="twitter:title" content="Upkarana Online Tools – Free Financial Calculators">
+  <meta property="twitter:description" content="Free online financial calculators including EMI, SIP, Lumpsum, Net Worth, Credit Card Debt Payoff and Loan tools.">
+  <meta property="twitter:image" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'GA_MEASUREMENT_ID');
+  </script>
+
+  <script>
+    // Newsletter form handler
+    document.addEventListener('DOMContentLoaded', function() {
+      const newsletterForm = document.querySelector('.newsletter-form');
+      if (newsletterForm) {
+        newsletterForm.addEventListener('submit', function(e) {
+          e.preventDefault();
+          alert('Thank you for subscribing! We\'ll send you monthly financial tips and updates.');
+          this.reset();
+        });
+      }
+    });
+  </script>
 </head>
 
 <body>
@@ -70,6 +112,17 @@
   <div class="content-section">
     <h2>Why Use Our Calculators?</h2>
     <p>Upkarana Online Tools provides free, accurate and easy-to-use calculators to help you make smarter financial decisions.</p>
+  </div>
+
+  <!-- Newsletter Signup -->
+  <div class="newsletter-section">
+    <h2>Stay Updated with Financial Tips</h2>
+    <p>Get monthly financial planning tips, calculator updates, and investment insights delivered to your inbox.</p>
+    <form class="newsletter-form" action="#" method="post">
+      <input type="email" placeholder="Enter your email address" required>
+      <button type="submit">Subscribe</button>
+    </form>
+    <p class="privacy-note">We respect your privacy. Unsubscribe at any time.</p>
   </div>
 
   <div class="ads">Ad Space</div>
