--- a/calculators/mutual-fund-return-calculator.html
+++ b/calculators/mutual-fund-return-calculator.html
@@ -5,12 +5,24 @@
   <title>Mutual Fund Return Calculator – Calculate MF Returns | Upkarana Online Tools</title>
   <meta name="description" content="Calculate mutual fund returns with SIP and lumpsum investments. Compare different schemes and track your portfolio performance with our free MF return calculator." />
   <meta name="keywords" content="mutual fund return calculator, MF calculator, SIP returns, lumpsum returns, portfolio calculator" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/mutual-fund-return-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
