--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,10 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy</title>
+  <meta name="description" content="Privacy Policy for Upkarana Online Tools. Learn how we collect, use, and protect your personal information." />
+  <meta name="keywords" content="privacy policy, data protection, personal information, online tools" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/privacy-policy.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
