--- a/calculators/break-even-investment-calculator.html
+++ b/calculators/break-even-investment-calculator.html
@@ -5,12 +5,24 @@
   <title>Break-Even Investment Calculator – Calculate Investment Break-Even Point</title>
   <meta name="description" content="Free Break-Even Investment Calculator to calculate when your investment will break even. Find out how long it takes to recover your initial investment amount." />
   <meta name="keywords" content="break even calculator, investment break even, return on investment, break even analysis, investment recovery" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/break-even-investment-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
