--- a/calculators/capital-gains-tax-calculator.html
+++ b/calculators/capital-gains-tax-calculator.html
@@ -6,12 +6,25 @@
 
   <meta name="description"
         content="Free Capital Gains Tax Calculator to calculate tax on short-term and long-term capital gains from investments in India." />
+  <meta name="keywords" content="capital gains tax calculator, LTCG tax, STCG tax, capital gains tax India, investment tax calculator">
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/capital-gains-tax-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
