--- a/calculators/credit-score-impact-simulator.html
+++ b/calculators/credit-score-impact-simulator.html
@@ -5,12 +5,24 @@
   <title>Credit Score Impact Simulator – Simulate Credit Score Changes | Upkarana Online Tools</title>
   <meta name="description" content="Simulate how different financial actions affect your credit score. See the impact of payments, new loans, and credit utilization on your CIBIL score." />
   <meta name="keywords" content="credit score simulator, CIBIL score, credit score impact, credit utilization, payment history, credit score calculator" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/credit-score-impact-simulator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
