--- a/calculators/emi-vs-sip-comparison-tool.html
+++ b/calculators/emi-vs-sip-comparison-tool.html
@@ -4,14 +4,26 @@
   <meta charset="UTF-8" />
   <title>EMI vs SIP Comparison Tool – Compare Loan EMI vs SIP Investment Returns</title>
 
-  <meta name="description"
-        content="Free EMI vs SIP Comparison Tool to compare loan EMI payments with SIP investment returns and see which is better for your money." />
+  <meta name="description" content="Free EMI vs SIP Comparison Tool to compare loan EMI payments with SIP investment returns and see which is better for your money." />
+  <meta name="keywords" content="EMI vs SIP comparison, loan vs investment, EMI calculator, SIP calculator, financial comparison" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/emi-vs-sip-comparison-tool.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
