--- a/calculators/inflation-impact-calculator.html
+++ b/calculators/inflation-impact-calculator.html
@@ -5,12 +5,24 @@
   <title>Inflation Impact Calculator – Calculate Inflation's Effect on Purchasing Power</title>
   <meta name="description" content="Free Inflation Impact Calculator to calculate how inflation affects your money's purchasing power over time. See the real value loss and plan for inflation." />
   <meta name="keywords" content="inflation calculator, purchasing power, inflation impact, real value, inflation rate, cost of living" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/inflation-impact-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
