--- a/calculators/loan-eligibility-calculator.html
+++ b/calculators/loan-eligibility-calculator.html
@@ -5,12 +5,24 @@
   <title>Loan Eligibility Calculator – Check Your Loan Eligibility | Upkarana Online Tools</title>
   <meta name="description" content="Calculate your loan eligibility for home loans, personal loans, and car loans. Check EMI affordability and maximum loan amount you can get." />
   <meta name="keywords" content="loan eligibility calculator, home loan eligibility, personal loan eligibility, car loan eligibility, EMI calculator, loan amount" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/loan-eligibility-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
