--- a/calculators/monthly-savings-planner.html
+++ b/calculators/monthly-savings-planner.html
@@ -4,14 +4,26 @@
   <meta charset="UTF-8" />
   <title>Monthly Savings Planner – Plan Your Monthly Savings Goals</title>
 
-  <meta name="description"
-        content="Free Monthly Savings Planner to calculate how much to save monthly, track progress towards financial goals, and build wealth systematically." />
+  <meta name="description" content="Free Monthly Savings Planner to calculate how much to save monthly, track progress towards financial goals, and build wealth systematically." />
+  <meta name="keywords" content="monthly savings planner, savings calculator, financial goals, wealth building, savings plan, budget planner" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/monthly-savings-planner.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
