--- a/calculators/retirement-planning-calculator.html
+++ b/calculators/retirement-planning-calculator.html
@@ -5,12 +5,24 @@
   <title>Retirement Planning Calculator – Plan Your Retirement | Upkarana Online Tools</title>
   <meta name="description" content="Plan your retirement with our comprehensive calculator. Calculate retirement corpus, monthly expenses, and investment requirements for a secure financial future." />
   <meta name="keywords" content="retirement calculator, retirement planning, retirement corpus, pension calculator, financial planning" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/retirement-planning-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
