--- a/calculators/step-up-sip-calculator.html
+++ b/calculators/step-up-sip-calculator.html
@@ -4,14 +4,26 @@
   <meta charset="UTF-8" />
   <title>Step-Up SIP Calculator – Calculate SIP with Annual Increase</title>
 
-  <meta name="description"
-        content="Free Step-Up SIP Calculator to calculate SIP returns with yearly increment, maturity value, total investment and wealth gained." />
+  <meta name="description" content="Free Step-Up SIP Calculator to calculate SIP returns with yearly increment, maturity value, total investment and wealth gained." />
+  <meta name="keywords" content="step up SIP calculator, SIP calculator, systematic investment plan, increasing SIP, investment calculator" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/step-up-sip-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
