--- a/calculators/wealth-goal-calculator.html
+++ b/calculators/wealth-goal-calculator.html
@@ -4,14 +4,26 @@
   <meta charset="UTF-8" />
   <title>Wealth Goal Calculator – Plan to Achieve ₹1 Cr or ₹5 Cr</title>
 
-  <meta name="description"
-        content="Free Wealth Goal Calculator to plan your investments and achieve wealth goals like ₹1 Cr or ₹5 Cr. Calculate time to reach target or required monthly investment." />
+  <meta name="description" content="Free Wealth Goal Calculator to plan your investments and achieve wealth goals like ₹1 Cr or ₹5 Cr. Calculate time to reach target or required monthly investment." />
+  <meta name="keywords" content="wealth goal calculator, financial goals, investment planning, wealth building, target amount calculator" />
+  <meta name="author" content="Upkarana Online Tools">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/wealth-goal-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EFJVYTGFN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-4EFJVYTGFN');
+  </script>
 
   <!-- Global + Page CSS -->
   <link rel="stylesheet" href="../style.css">
