form Submit commit

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           const message = formData.get('message');
 
           // Send to FormSubmit
-          fetch('https://formsubmit.co/el/hizusi', {
+          fetch('https://formsubmit.co/gyanprakash0711@gmail.com', {
             method: 'POST',
             body: new URLSearchParams({
               name: name,
