--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           const email = formData.get('email');
 
           // Send to FormSubmit
-          fetch('https://formsubmit.co/el/hizusi', {
+          fetch('https://formsubmit.co/gyanprakash0711@gmail.com', {
             method: 'POST',
             body: new URLSearchParams({
               email: email,
