--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 
   <!-- Newsletter Signup -->
-  <div class="newsletter-section">
+  <!--<div class="newsletter-section">
     <h2>Stay Updated with Financial Tips</h2>
     <p>Get monthly financial planning tips, calculator updates, and investment insights delivered to your inbox.</p>
     <form class="newsletter-form" action="#" method="post">
@@ -150,7 +150,7 @@
       <button type="submit">Subscribe</button>
     </form>
     <p class="privacy-note">We respect your privacy. Unsubscribe at any time.</p>
-  </div>
+  </div> -->
 
   <div class="ads">Ad Space</div>
 
