--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <a href="calculators/step-up-sip-calculator.html" class="tool-card"><h3>Step-Up SIP Calculator</h3><p>SIP with increment</p></a>
     <a href="calculators/real-cagr-calculator.html" class="tool-card"><h3>Real CAGR Calculator</h3><p>Compound annual growth rate</p></a>
     <a href="calculators/emi-vs-sip-comparison-tool.html" class="tool-card"><h3>EMI vs SIP Comparison Tool</h3><p>Compare loan vs investment</p></a>
+    <a href="calculators/buy-vs-rent-calculator.html" class="tool-card"><h3>Buy vs Rent Calculator</h3><p>Compare buying house vs renting</p></a>
     <a href="calculators/loan-prepayment-foreclosure-calculator.html" class="tool-card"><h3>Loan Prepayment Foreclosure Calculator</h3><p>Savings from early repayment</p></a>
     <a href="calculators/break-even-investment-calculator.html" class="tool-card"><h3>Break-Even Investment Calculator</h3><p>Calculate investment break-even point</p></a>
     <a href="calculators/fire-calculator.html" class="tool-card"><h3>FIRE Calculator</h3><p>Financial Independence Retire Early</p></a>
