--- a/tools.html
+++ b/tools.html
@@ -61,6 +61,7 @@
     <a href="calculators/step-up-sip-calculator.html" class="tool-card">Step-Up SIP Calculator</a>
     <a href="calculators/real-cagr-calculator.html" class="tool-card">Real CAGR Calculator</a>
     <a href="calculators/emi-vs-sip-comparison-tool.html" class="tool-card">EMI vs SIP Comparison Tool</a>
+    <a href="calculators/buy-vs-rent-calculator.html" class="tool-card">Buy vs Rent Calculator</a>
     <a href="calculators/loan-prepayment-foreclosure-calculator.html" class="tool-card">Loan Prepayment Foreclosure Calculator</a>
     <a href="calculators/break-even-investment-calculator.html" class="tool-card">Break-Even Investment Calculator</a>
     <a href="calculators/fire-calculator.html" class="tool-card">FIRE Calculator</a>
