Added blog arictles for the upkarana online tools website.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
+      <a href="blog/index.html">Blog</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -116,6 +117,7 @@
     <a href="calculators/nps-calculator.html" class="tool-card"><h3>NPS Calculator</h3><p>National Pension System maturity</p></a>
     <a href="calculators/capital-gains-tax-calculator.html" class="tool-card"><h3>Capital Gains Tax Calculator</h3><p>Calculate LTCG & STCG tax</p></a>
     <a href="calculators/mutual-fund-return-calculator.html" class="tool-card"><h3>Mutual Fund Return Calculator</h3><p>Calculate MF SIP & lumpsum returns</p></a>
+    <a href="calculators/sip-calculator.html" class="tool-card"><h3>SIP Calculator</h3><p>Systematic Investment Plan returns</p></a>
     <a href="calculators/loan-eligibility-calculator.html" class="tool-card"><h3>Loan Eligibility Calculator</h3><p>Check loan eligibility & EMI</p></a>
     <a href="calculators/retirement-planning-calculator.html" class="tool-card"><h3>Retirement Planning Calculator</h3><p>Plan your retirement corpus</p></a>
     <a href="calculators/compound-interest-calculator.html" class="tool-card"><h3>Compound Interest Calculator</h3><p>Investment growth</p></a>
