--- a/tools.html
+++ b/tools.html
@@ -32,6 +32,7 @@
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
+      <a href="blog/index.html">Blog</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
@@ -44,6 +45,7 @@
 
   <div style="display:grid; grid-template-columns:repeat(auto-fit, minmax(220px, 1fr)); gap:16px; margin-top:20px;">
     <a href="calculators/emi-calculator.html" class="tool-card">EMI Calculator</a>
+    <a href="calculators/sip-calculator.html" class="tool-card">SIP Calculator</a>
     <a href="calculators/income-tax-calculator.html" class="tool-card">Income Tax Calculator</a>
     <a href="calculators/ppf-maturity-calculator.html" class="tool-card">PPF Maturity Calculator</a>
     <a href="calculators/epf-calculator.html" class="tool-card">EPF Calculator</a>
