--- a/calculators/epf-calculator.html
+++ b/calculators/epf-calculator.html
@@ -118,6 +118,7 @@
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
+      <a href="../blog/index.html">Blog</a>
       <a href="../about.html">About</a>
       <a href="../contact.html">Contact</a>
     </nav>
