blogs post updates commit.

--- a/calculators/ppf-maturity-calculator.html
+++ b/calculators/ppf-maturity-calculator.html
@@ -147,24 +147,18 @@
   <h1>PPF Maturity Calculator</h1>
 
   <!-- FORM -->
-  <div class="form-grid">
-    <div class="form-group">
-      <label for="annualDeposit">Annual Deposit Amount (₹)</label>
-      <input type="text" id="annualDeposit" placeholder="e.g., 50000">
-      <small class="help-text">The amount you deposit annually (min ₹500, max ₹1,50,000).</small>
-    </div>
+  <div class="form-section">
+    <label for="annualDeposit">Annual Deposit Amount (₹)</label>
+    <input type="text" id="annualDeposit" placeholder="e.g., 50000">
+    <span class="help-text">The amount you deposit annually (min ₹500, max ₹1,50,000).</span>
 
-    <div class="form-group">
-      <label for="rate">Annual Interest Rate (%)</label>
-      <input type="text" id="rate" placeholder="e.g., 7.1">
-      <small class="help-text">The current PPF interest rate (government notified).</small>
-    </div>
+    <label for="rate">Annual Interest Rate (%)</label>
+    <input type="text" id="rate" placeholder="e.g., 7.1">
+    <span class="help-text">The current PPF interest rate (government notified).</span>
 
-    <div class="form-group">
-      <label for="tenure">Tenure (Years)</label>
-      <input type="text" id="tenure" placeholder="e.g., 15">
-      <small class="help-text">Duration of the PPF account (15-50 years).</small>
-    </div>
+    <label for="tenure">Tenure (Years)</label>
+    <input type="text" id="tenure" placeholder="e.g., 15">
+    <span class="help-text">Duration of the PPF account (15-50 years).</span>
   </div>
 
   <div class="form-actions">
